--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Dino Run</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="bootstrap4.css">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow-x: hidden;
+            background-color: #000;
+        }
+
+        #flash-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+
+        @media only screen and (max-width: 768px) and (orientation: landscape) {
+            #flash-container {
+                width: 100%;
+                height: 100%;
+                transform: scale(0.9);
+                transform-origin: center;
+            }
+        }
+    </style>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
