--- a/index.html
+++ b/index.html
@@ -10,42 +10,101 @@
         body, html {
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            width: 100%;
+            height: 100%;
             background-color: #000;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         #flash-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 100vw;
-            height: 100vh;
-            margin: 0;
-            padding: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #virtual-keyboard {
+            position: fixed;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .arrow-key {
+            width: 60px;
+            height: 60px;
+            background-color: #555;
+            color: white;
+            font-size: 24px;
+            text-align: center;
+            line-height: 60px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+            user-select: none;
+        }
+
+        .arrow-key:active {
+            background-color: #777;
         }
 
         @media only screen and (max-width: 768px) and (orientation: landscape) {
             #flash-container {
-                width: 100%;
-                height: 100%;
                 transform: scale(0.9);
                 transform-origin: center;
+            }
+
+            #virtual-keyboard {
+                bottom: 5px;
+            }
+
+            .arrow-key {
+                width: 50px;
+                height: 50px;
+                line-height: 50px;
+                font-size: 20px;
             }
         }
     </style>
     <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
     <script>
         window.RufflePlayer = window.RufflePlayer || {};
-        window.addEventListener("DOMContentLoaded", (event) => {
+        window.addEventListener("DOMContentLoaded", () => {
             const ruffle = window.RufflePlayer.newest();
             const player = ruffle.createPlayer();
             const container = document.getElementById("flash-container");
             container.appendChild(player);
             player.load("dinorun.swf");
         });
+
+        function simulateKeyPress(keyCode) {
+            const event = new KeyboardEvent('keydown', { keyCode: keyCode, which: keyCode });
+            document.dispatchEvent(event);
+        }
+
+        window.onload = function() {
+            document.getElementById("arrow-up").addEventListener("touchstart", () => simulateKeyPress(38));
+            document.getElementById("arrow-left").addEventListener("touchstart", () => simulateKeyPress(37));
+            document.getElementById("arrow-right").addEventListener("touchstart", () => simulateKeyPress(39));
+            document.getElementById("arrow-down").addEventListener("touchstart", () => simulateKeyPress(40));
+        };
     </script>
 </head>
 <body>
     <div id="flash-container"></div>
+
+    <div id="virtual-keyboard">
+        <div id="arrow-left" class="arrow-key">←</div>
+        <div id="arrow-up" class="arrow-key">↑</div>
+        <div id="arrow-down" class="arrow-key">↓</div>
+        <div id="arrow-right" class="arrow-key">→</div>
+    </div>
 </body>
 </html>
